--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: kpuwar <kpuwar@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/26 21:08:59 by kpuwar            #+#    #+#              #
-#    Updated: 2023/03/09 14:25:26 by kpuwar           ###   ########.fr        #
+#    Updated: 2023/04/22 18:32:13 by kpuwar           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -48,8 +48,7 @@ SRCS = 	ft_isalpha.c	\
 		ft_putnbr_fd.c	\
 		get_next_line.c	\
 		ft_printf.c		\
-		ft_printf_utils.c	\
-		ft_error.c
+		ft_printf_utils.c
 
 SRCSB =	ft_lstnew.c			\
 		ft_lstadd_front.c	\
